--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+    <meta http-equiv="refresh" content="0;url=https://ihogu.com">
         <title>`substitute(Filename('', 'Page Title'), '^.', '\u&', '')`</title>
         meta
     </head>
